[project]
name = "pikaclone"
version = "0.1.0"
description = "Mobile Streaming App"

[tool.flet]
product = "PikaClone"
bundle_id = "com.baper.pikaclone"

[tool.flet.android]
permissions = ["INTERNET"]
# This is the secret sauce that stops the black screen
allow_cleartext_traffic = true

[tool.flet.app]
path = "."
entry_point = "main.py"
